--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/demo
+spring.datasource.url=jdbc:postgresql://localhost/Reci-Cla-DB
 spring.datasource.username=postgres
 spring.datasource.password=admin
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
