--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.database=postgresql
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/Reci-Cla-DB
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=razor_dota
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
