--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/Reci-Cla-DB
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=123456
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
