--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.username=admin
 spring.datasource.password=J5bA15x380VOn7q5o0qPBZkljrTGvRk5
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.h2.console.enabled=true
-server.port=8080
+#server.port=8080
