--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=J5bA15x380VOn7q5o0qPBZkljrTGvRk5
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.h2.console.enabled=true
 #server.port=8080
+jwt.header=Authorization
+jwt.secret=my-very-secret-key
